tests/invalid/iter_zero_args/main.py
def main() -> None:
    it = iter()
    print(it)
